# storage/api-docs/api-docs.json
@@ -250,24 +250,33 @@
                 ]
             }
         },
-        "/api/import-personal": {
+        "/api/import-brokerage-statement": {
             "post": {
                 "tags": [
-                    "Financeiro"
+                    "Notas de Corretagem"
                 ],
-                "summary": "Importar histórico financeiro da B3 a partir de um arquivo .xlsx",
-                "description": "Importa um histórico financeiro da B3 a partir de um arquivo .xlsx, processa cada linha do arquivo e realiza as ações necessárias com os dados.",
-                "operationId": "importHistoryB3",
+                "summary": "Importar nota de corretagem",
+                "description": "Importa uma nota de corretagem de um arquivo PDF e salva as informações no banco de dados.",
+                "operationId": "b812203215ab0179d4496a7a178ed1d7",
                 "requestBody": {
-                    "description": "Arquivo .xlsx contendo o histórico financeiro da B3",
                     "required": true,
                     "content": {
                         "multipart/form-data": {
                             "schema": {
+                                "required": [
+                                    "broker_id",
+                                    "brokerage_statement"
+                                ],
                                 "properties": {
-                                    "file": {
-                                        "description": "Arquivo .xlsx",
-                                        "type": "file"
+                                    "broker_id": {
+                                        "description": "ID da corretora",
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "brokerage_statement": {
+                                        "description": "Arquivo PDF da nota de corretagem",
+                                        "type": "string",
+                                        "format": "binary"
                                     }
                                 },
                                 "type": "object"
@@ -277,14 +286,18 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Arquivo importado com sucesso",
+                        "description": "Nota de corretagem importada com sucesso",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
                                         "message": {
                                             "type": "string",
-                                            "example": "Arquivo importado com sucesso"
+                                            "example": "Nota de corretagem importada com sucesso!"
                                         }
                                     },
                                     "type": "object"
@@ -293,14 +306,18 @@
                         }
                     },
                     "400": {
-                        "description": "Requisição inválida",
+                        "description": "Erro na importação da nota de corretagem",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
                                         "message": {
                                             "type": "string",
-                                            "example": "O arquivo deve ser um .xlsx"
+                                            "example": "Erro na importação da nota de corretagem"
                                         }
                                     },
                                     "type": "object"
@@ -308,21 +325,8 @@
                             }
                         }
                     },
-                    "500": {
-                        "description": "Erro ao importar arquivo",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Erro ao importar arquivo"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                    "401": {
+                        "description": "Não autorizado"
                     }
                 },
                 "security": [
